# git-issue-manage

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  rewrite_prompt.md
src/git_issue_manager/: __init__.py
src/git_issue_manager/api/: github_client.py  openrouter_client.py
src/git_issue_manager/cli/: __init__.py  main.py
src/git_issue_manager/utils/: __init__.py  config.py  file_operations.py
